# chessAI

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Optionale freiwillige Übung.txt
docs/: feature_list.md  protocol.md  tasks.md
lib/chessAI/: AbstractChessPlayer.h  CMakeLists.txt  ChessAI.cpp  ChessAI.h  ChessGame.cpp  ChessGame.h  Evaluation.cpp  Evaluation.h  HumanChessPlayer.cpp  HumanChessPlayer.h  MoveSorter.cpp  MoveSorter.h  Opening.cpp  Opening.h  macros.h  thread_pool.cc  thread_pool.h
lib/thc/: CMakeLists.txt  cmake_install.cmake
lib/thc/src/: ChessDefs.h  ChessEvaluation.cpp  ChessEvaluation.h  ChessPosition.cpp  ChessPosition.h  ChessPositionRaw.h  ChessRules.cpp  ChessRules.h  GeneratedLookupTables.h  HashLookup.h  Move.cpp  Move.h  Portability.cpp  PrivateChessDefs.cpp  PrivateChessDefs.h  demo.cpp  test-framework.cpp  thc - the original umbrella.h  thc-regen.cpp  thc-regen.h  thc.cpp  thc.h  util.cpp  util.h
resources/Scenarios/: scenario1.txt  scenario10.txt  scenario11.txt  scenario2.txt  scenario3.txt  scenario4.txt  scenario5.txt  scenario6.txt  scenario7.txt  scenario8.txt  scenario9.txt
src/: AbstractChessPlayer.h  CMakeLists.txt  ChessAI.cpp  ChessAI.h  ChessGame.cpp  ChessGame.h  Evaluation.cpp  Evaluation.h  HumanChessPlayer.cpp  HumanChessPlayer.h  MoveSorter.cpp  MoveSorter.h  Opening.cpp  Opening.h  PerformanceTester.cpp  PerformanceTester.h  main.cpp  thread_pool.cc  thread_pool.h
src/PerformanceMeasurement/: CMakeLists.txt  PerformanceTester.cpp  PerformanceTester.h  main.cpp
src/ScenarioTesting/: Scenario.cpp  Scenario.h  main.cpp
test/: CMakeLists.txt  TestHeader.h  Unittest.cpp  main.cpp
